# Uni-CPU

./: .gitignore  BRAM64.coe  BitStreamOutput.bif  CMakeLists.txt  COE.py  CreateCodeObject.py  LCDExample.c  LICENSE.md  README.md  output.coe  test.asm
CPURev0/: PYNQ_CONFIG.xpr  vivado_12704.backup.jou  vivado_25172.backup.jou  vivado_26384.backup.jou  vivado_pid9612.str
CPURev0/PYNQ_CONFIG.cache/sim/: ssm.db
CPURev0/PYNQ_CONFIG.cache/wt/: synthesis.wdf  webtalk_pa.xml
CPURev0/PYNQ_CONFIG.runs/.jobs/: vrs_config_1.xml  vrs_config_12.xml  vrs_config_13.xml  vrs_config_14.xml  vrs_config_15.xml  vrs_config_16.xml  vrs_config_27.xml  vrs_config_35.xml  vrs_config_4.xml  vrs_config_8.xml
CPURev0/PYNQ_CONFIG.runs/impl_1/: .init_design.begin.rst  .vivado.begin.rst  CU.tcl  CU.vdi  CU_bus_skew_routed.rpt  CU_bus_skew_routed.rpx  CU_clock_utilization_routed.rpt  CU_control_sets_placed.rpt  CU_drc_opted.rpt  CU_drc_opted.rpx  CU_drc_routed.rpt  CU_drc_routed.rpx  CU_io_placed.rpt  CU_methodology_drc_routed.rpt  CU_opt.dcp  CU_placed.dcp  CU_power_routed.rpt  CU_power_routed.rpx  CU_route_status.rpt  CU_routed.dcp  CU_timing_summary_routed.rpt  CU_timing_summary_routed.rpx  CU_utilization_placed.pb  CU_utilization_placed.rpt  gen_run.xml  htr.txt  init_design.pb  opt_design.pb  place_design.pb  route_design.pb  rundef.js  runme.sh  vivado.jou  vivado.pb
CPURev0/PYNQ_CONFIG.runs/synth_1/: .vivado.begin.rst  CU.dcp  CU.tcl  CU.vds  CU_utilization_synth.rpt  gen_run.xml  htr.txt  project.wdf  rundef.js  runme.sh  vivado.jou  vivado.pb
CPURev1/: PYNQ_CONFIG.xpr  vivado.jou  vivado_21684.backup.jou  vivado_pid12704.str
CPURev1/.Xil/Vivado-9612-DESKTOP-PSI4IU2/: ZYNQ_wrapper.hwdef  elab.rtd
CPURev1/PYNQ_CONFIG.cache/sim/: ssm.db
CPURev1/PYNQ_CONFIG.cache/wt/: gui_handlers.wdf  synthesis.wdf  webtalk_pa.xml
CPURev1/PYNQ_CONFIG.hw/hw_1/: hw.xml
CPURev2/: CPURev2.xpr  CPU_TB_func_synth.wcfg
CPU_Rev3/: CPU_Rev3.xpr  CPU_wrapper.xsa
DevBoardDocs/: Smart_ZYNQ_SP_IO_length_20230705.xls  Thumbs.db
HardwareExport/: CPU_wrapper.bif  CPU_wrapper.xsa  Exporter.bat  fsbl.elf
HardwareExport/ZYNQ-Board/: vitis-comp.json
LED-TestProject/: LED-TestProject.xpr
include/: Bus.h  Memory.h  instructs.h
include/CPU/: Core.h  InstructionSet.h
ip_repo/: edit_PL_DDR_RW_v1_0.xpr
ip_repo/PL_DDR_RW_1_0/: component.xml
src/: bus.cpp  core.cpp  main.cpp
(+2893 files in other folders)
